--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -70,7 +70,13 @@
                 </p>
                </div>
             </article>
-            
+           <div class="botonemail">
+              <form action="/procesar_formulario" method="post">
+                <label for="email">Si deseas más información, envíanos tu:</label>
+                 <input type="email" id="email" name="email" placeholder="Email" required>
+                 <input type="submit" value="Enviar">
+              </form>
+            </div>
         </section> 
         <h2 class="agradecimiento">
           ¡Gracias por confiar en Manos Doradas para cuidar de ti y tus seres queridos!
