--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@
 display: flex;
 margin-left: 5%;
  flex-wrap: wrap;
- width: 30%;
+ width: 300vh;
  background-color: #90CCD1;
  border-radius: 2%;
  margin-bottom: 2%;
