--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,16 @@
     
   header {
     display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 10px;
     background-color: #90ccd1;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
+  .cabecera {
+    display: flex;
+
   }
     
   .logo img {
@@ -62,7 +67,7 @@
     cursor: pointer;
   }
     
-  .navegacion ul {
+  .nav-links {
     list-style: none;
     display: flex;
     justify-content: center;
@@ -74,11 +79,11 @@
     width: 100px;
   }
     
-  .navegacion li {
+  .nav-links li {
      margin: 0 15px;
   }
     
-  .navegacion a {
+  .nav-links a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
@@ -93,26 +98,19 @@
     justify-content: center;
     height: 82vh;
   }
+
   .letra{
-    margin-top: 1%;  
-    margin-bottom: 10%;
-    margin-right: 50%;
-    margin-left: 5%;
-    object-position: 5%;
-    transform: translate(-50%, -50%);
-    color: #203048;
-    font-size: 19px; 
-    font-weight: bold;
-    font-style: oblique;
-    text-align: center;
-  }
-  .float-container{
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 20% 50%;
-    align-items: start;
+  margin: 1% 10% 50% 5%;
+  object-position: 5%;
+  transform: translate(-50%, -50%);
+  color: #203048;
+  font-size: 19px; 
+  font-weight: bold;
+  font-style: oblique;
+  text-align: center;
   }
 
+ 
 /* Fin del estilo de Home*/
 
 /*Estilo Login*/
