--- a/css/style.css
+++ b/css/style.css
@@ -640,14 +640,9 @@ font-size: 35px;
 /*Responsive*/ /*con responsabilidad*/
  
 @media screen and (max-width: 768px) {
-  html {
-    font-size: 12px;
-  }
-
-  /* Estilos para la sección de Home */
-  header {
-    width: 100%;
-  }
+   html {
+   font-size: 12px;
+  } 
 
   .letra {
     font-size: 14px;
@@ -660,9 +655,21 @@ font-size: 35px;
     height: 90px;
   }
 
-  .float-container {
-    grid-template-rows: auto;
+  header{
+    padding: 10px;
+    background-color: #90ccd1;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+    flex-wrap: wrap;
+    flex-direction: column;
   }
+
+  .cabecera {
+    flex-direction: column;
+    align-items: center;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
   .company-name h1 {
     text-align: center;
@@ -675,15 +682,16 @@ font-size: 35px;
     width: 25%;
   }
 
-  .navegacion ul {
+  .nav-links {
     list-style: none;
     display: flex;
-    justify-content: center;
     padding: 8px;
     margin: 20px 5%;
     text-align: right;
-    justify-content: flex-start;
+    justify-content: center;
     width: 100px;
+    flex-direction: column;
+    align-items: center;
   }
 
   .background-image {
