--- a/templates/login.html
+++ b/templates/login.html
@@ -14,34 +14,34 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
+
   <body>
     <header>
-        <div class="logo">
-         <a href="../index.html">
-          <img class="logo"src="../images/logo/Golden_Hands.png" alt="Golden Hands Logo"/>
-         </a>
-        </div>
-        <div class="company-name">
-          <h1>Golden Hands</h1>
-        </div>
-  
-        <nav class="navegacion">
-          <ul class="navegacion">
-            <li class="navegacion"><a href="Services.html">Services</a></li>
-            <li class="navegacion"><a href="Products.html">Products</a></li>
-            <li class="navegacion"><a href="Contact.html">Contact</a></li>
-            <li class="navegacion"><a href="AboutUs.html">AboutUs</a></li>
-          </ul>
-        </nav>
+      <div class="cabecera container">
+      <div class="logo">
+        <a href="index.html"><img class="logo"src="../images/logo/Golden_Hands.png" alt="Golden Hands Logo"/></a>
 
-        <div class="button-container">
-          <a href="login.html" class="login-button">Login</a>
-          <button id="cart-button" onclick="addToCart()">Add to Cart</button>
-        </div>
-
-      </header>
+      </div>
+      <div class="company-name">
+        <h1>GOLDEN HANDS</h1>
+      </div>
+      <div class="button-container">
+        <a href="login.html" class="login-button">Login</a>
+        <button id="cart-button" onclick="addToCart()">Add to Cart</button>
+      </div>
+    </div>
+      <nav class="navegacion container">
+        <ul class="nav-links">
+          <li><a href="Services.html">Services</a></li>
+          <li><a href="Products.html">Products</a></li>
+          <li><a href="Contact.html">Contact</a></li>
+          <li><a href="AboutUs.html">AboutUs</a></li>
+        </ul>
+      </nav>
+    
+    </header>
     <section class="login-container">
       <div class="container-form register">
         <div class="information">
