--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,7 @@
     list-style: none;
     display: flex;
     justify-content: center;
-    padding: 8px;
-    margin: 20px 372px;
+    margin: 0px 32% 0px 32%;
     position: absolute;
     text-align: right;
     justify-content: flex-start;
