Logo AboutUs.html

--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -21,7 +21,7 @@
     <header>
       <div class="cabecera container">
       <div class="logo">
-        <a href="index.html"><img class="logo"src="../images/logo/Golden_Hands.png" alt="Golden Hands Logo"/></a>
+        <a href="../index.html"><img class="logo"src="../images/logo/Golden_Hands.png" alt="Golden Hands Logo"/></a>
 
       </div>
       <div class="company-name">
